%%{init: {"theme": "base", "themeVariables": {"fontFamily": "Arial", "fontSize": "20px", "primaryColor": "#eaf6ff", "primaryBorderColor": "#1f6f9f", "lineColor": "#4b5563"}}}%%
erDiagram
    ORGANISMES ||--o{ ANTENNES_REGIONALES : possede
    ORGANISMES ||--o{ USERS : rattache
    ORGANISMES ||--o{ DOCUMENTS : gere
    ORGANISMES ||--o{ DUPLICATAS : gere

    ANTENNES_REGIONALES ||--o{ USERS : rattache
    ANTENNES_REGIONALES ||--o{ DOCUMENTS : retrait_antenne
    ANTENNES_REGIONALES ||--o{ DUPLICATAS : retrait_antenne

    CENTRES_EXAMEN ||--o{ USERS : affecte_agent
    CENTRES_EXAMEN ||--o{ RENDEZ_VOUS : recoit_rdv_transmis

    USERS ||--o{ EXAMENS_VALIDES : possede
    USERS ||--o{ DOCUMENTS : demande
    USERS ||--o{ DUPLICATAS : demande
    USERS ||--o{ RENDEZ_VOUS : prend
    USERS ||--o{ RENDEZ_VOUS : planifie
    USERS ||--o{ RENDEZ_VOUS : confirme_retrait
    USERS ||--o{ NOTIFICATIONS : recoit
    USERS ||--o{ MAIL_LOGS : journalise
    USERS ||--o{ RECUS : recoit

    DOCUMENTS ||--o{ RENDEZ_VOUS : retrait_planifie
    DOCUMENTS ||--o| PAIEMENTS : paiement_optionnel
    DOCUMENTS ||--o| RELEVES : detail_releve
    DOCUMENTS ||--o| DIPLOMES : detail_diplome

    DUPLICATAS ||--|| PAIEMENTS : paiement
    DUPLICATAS ||--o| RELEVES : duplicata_releve
    DUPLICATAS ||--o| DIPLOMES : duplicata_diplome
    PAIEMENTS ||--o{ RECUS : produit

    ORGANISMES {
        string id PK
        string nom UK
        datetime createdAt
        datetime updatedAt
    }

    ANTENNES_REGIONALES {
        string id PK
        string nom
        string region
        string ville
        string organismeId FK
    }

    CENTRES_EXAMEN {
        string id PK
        string nom
        string region UK
        string ville
    }

    USERS {
        string id PK
        string authUserId UK
        string email UK
        string matricule UK
        string role
        string organismeId FK
        string antenneRegionaleId FK
        string centreExamenId FK
    }

    EXAMENS_VALIDES {
        string id PK
        string diplomeType
        int anneeSession
        string centreExamen
        string regionComposition
        string eleveId FK
    }

    DOCUMENTS {
        string id PK
        string typeDocument
        string diplomeType
        string statut
        string centreExamen
        string regionComposition
        string eleveId FK
        string organismeId FK
        string antenneRegionaleId FK
    }

    DUPLICATAS {
        string id PK
        string typeDocument
        string nomDuplicata
        string statut
        string intruction
        string regionComposition
        string eleveId FK
        string organismeId FK
        string antenneRegionaleId FK
    }

    RENDEZ_VOUS {
        string id PK
        datetime dateRdv
        string heureRdv
        string lieu
        string statut
        string adminId FK
        string eleveId FK
        string documentId FK
        string retraitConfirmeParId FK
        datetime retraitConfirmeAt
    }

    PAIEMENTS {
        string id PK
        string statut
        string modePaiment
        string duplicataId FK
        string documentAcademiqueId FK
    }

    RECUS {
        string id PK
        string numero UK
        float montant
        datetime dateEmission
        string paiementId FK
        string userId FK
    }

    NOTIFICATIONS {
        string id PK
        string typeNotification
        string statut
        string message
        string userId FK
    }

    MAIL_LOGS {
        string id PK
        string to
        string subject
        string status
        string userId FK
    }
